# parser-quotes-bible

./: .gitignore  data.json  get_data.py  get_pages.py  pages.7z  pyproject.toml  readme.md
