[tool.poetry]
name = "random-quotes"
version = "0.1.0"
description = "Parse quotes from the site and writes them to the database."
authors = ["Alexander Dryannov <l3x.d@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"
lxml = "^4.9.1"
fake-useragent = "^0.1.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
